[package]
name = "bevy_shape_draw"
version = "0.1.2"
authors = [
    "Oscar Rimsby <oscar.rimsby@mobilaris.se>",
    "Mobilaris Industrial Solutions",
]
edition = "2021"
description = "A shape drawing tool for Bevy"
license = "MIT"
repository = "https://github.com/oscrim/bevy_shape_draw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version= "0.11", default-features = false }
bevy_mod_raycast = "0.13"

[dev-dependencies]
bevy = { version= "0.11", default-features = true }
